# epgu

./: .env  .env.example  .gitignore  Dockerfile  HOWTO.md  LICENSE  api gosuslugi.postman_collection.json  app.py  clear.bat  docker-compose-production.yml  docker-compose.yml  habr.md  issue.md  package-lock.json  plans.md  postman.json  readme.md  requirements.txt  unittest.py
api-gosuslugi-backend/: .env  Dockerfile  Dockerfile.test  HOWTO.md  README.md  app.py  config.py  requirements-test.txt  requirements.txt  routers.py  test_app.py  test_config.py
api-gosuslugi-client/: .dockerignore  .eslintrc.json  .npmrc  .prettierrc  Dockerfile  HOWTO.md  README.md  default.conf  default.conf.template  entrypoint.sh  generate-react-cli.json  package-lock.json  package.json  webpack.config.js
certs/: ca-root.crt  entrypoint.sh  some-quickresto-sitnikov.cer  some-sitnikov.cer  test_ca_rtk2.cer
docs/: CHANGELOG.md  README.md  Reglament_podklyucheniya_k_API_Gosuslug_1_8.docx  Rukovodstvo_polzovatelya_dlya_organizacii-potrebitelya_po_formirovaniyu_API-Key_i_polucheniyu_markera_dostupa._Versiya_3.3_ot_31.01.2023_g (3).docx  SERVICES.md  Specifikaciya_API_EPGU_Otpravka_dokumentov_na_podpis_v_Gosklyuch_v1.8.docx  Specifikaciya_API_EPGU_Podacha_zayavlenij_hodatajstv_obyasnenij_v1_3_kod_uslugi_10000000367_18_06_2024.docx  Specifikaciya_API_EPGU_Prilozhenie_10000000367_Podacha_zayavleni_hodatajstv_obyasnenij_v1.3.docx  Specifikaciya_API_EPGU_Prilozhenie_60010153_Nalichie_IP_v8.docx  Specifikaciya_API_EPGU_Servisy_migracionnogo_i_registracionnogo_uchyotov_dlya_gostinic_v1.3.docx  Specifikaciya_API_EPGU_Uvedomlenie_o_trudovoj_deyatelnosti_1.2.docx  api.md  architecture.md  (+6 more)
python-epgu/: .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml
python-epgu/examples/: citizen_auth.py  org_submit.py
python-epgu/src/epgu/: __init__.py  archive.py  client.py  const.py  errors.py  models.py
python-epgu/src/epgu/auth/: __init__.py  base.py  citizen.py  org.py  token.py
python-epgu/src/epgu/services/: __init__.py  submit.py
python-epgu/src/epgu/signature/: __init__.py  base.py  callable.py  cryptopro.py
python-epgu/tests/: test_archive.py  test_auth_org.py  test_client.py  test_models.py
(+31 files in other folders)
